<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/checkDrinksItem"
                android:layout_width="169dp"
                android:layout_height="67dp"
                android:padding="10dip"
                android:text="@string/drinksList_text"
                android:textSize="16dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numDrinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textSize="15sp"
                android:textStyle="italic" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_drink_add"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/add_image"
                android:src="@drawable/ic_add_black_18dp"
                android:tint="@color/grey_500" />

            <ImageView
                android:id="@+id/img_drink_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/delete_image"
                android:src="@drawable/ic_remove_black_18dp"
                android:tint="@color/grey_500" />


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
