<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/ball"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Shake the phone"
            android:textColor="@android:color/white"
            android:textSize="24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.50"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtv_acc_to_bar"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accelerometer_to_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtv_time_to_bar"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_to_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.50"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtv_acc_from_bar"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accelerometer_from_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtv_time_from_bar"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_from_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true" />


        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_accelerometer_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right|end"
        android:src="@drawable/ic_stop_circle_outline_36pt_2x"
        android:visibility="invisible"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/btn_accelerometer_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right|end"
        android:src="@drawable/ic_play_circle_outline_36pt_2x"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>