<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jdarcy.ordermydrinks.SelectedPlaceActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.30"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1">
                <!-- Name Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtv_name"
                    android:textStyle="bold" />
                <!--  Name Value -->
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!-- Address Label -->


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtv_address"
                    android:textStyle="bold" />

                <!--  Address Value -->


                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <!-- Website Label -->


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtv_website"
                    android:textStyle="bold" />

                <!--  WebSite Value -->

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!-- Phone Number Label -->
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                <!-- Location Value -->
                <TextView
                    android:id="@+id/location"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <!-- Email bar button -->

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_email"
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@android:drawable/ic_dialog_email"

                    />
                <!-- Call bar button -->
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_call"
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_call_white_36dp" />

                <!-- Order Drinks button -->
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_beer"
                    app:layout_anchorGravity="bottom|right" />
            </LinearLayout>

        </RelativeLayout>


        <fragment
            android:id="@+id/nav_drwr_fragment"
            android:name="com.example.jdarcy.ordermydrinks.NavigationDrawerFragment"
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout="@layout/fragment_navigation_drawer"
            tools:layout="@layout/fragment_navigation_drawer" />

    </android.support.v4.widget.DrawerLayout>


</LinearLayout>

